# FLINT

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml
docs/: DATASET_FACTS.md  DATA_SPEC.md  POSITIONING.md  POSITIONING_LITREVIEW.md  REPRODUCE.md  SCHEMA.md  SOTA_TABLE.md
experiments/flint/: pertable_cpa_250wt.json  pertable_cpa_250wt_candgen.json  pertable_cta_250wt.json  results.json
experiments/flint/cells/: cpa_enriched.out  cpa_wikidatatables.out  postfix.out  realel_cpa_250wt.out  table2_cpa.out
experiments/flint/llm_panel/: _progress.txt  gemma2-9b.txt  llama31-8b.txt  ministral-8b.txt  mistral-7b.txt  qwen25-3b.txt  qwen25-7b.txt
paper/: insights.tex  main_results.tex
paper/flint/: STORY.md  figures_generated.tex  insights.tex  main.tex  references.bib
paper/flint/figures/: cta_offset.tex  (+2 more)
paper/tables/: ablation.tex  conformal.tex  coverage_shift.tex  cpa_main.tex  cta_main.tex  robustness.tex  toughtables.tex
scripts/: download_data.sh  flint_candgen_recall.py  flint_cpa_ablation.py  flint_cpa_ranker.py  flint_cta_ablation.py  flint_cta_ranker.py  flint_efficiency.py  flint_toughtables.py  llm_baseline.py  llm_toughtables.py  make_figures.py  make_schematic.py  make_tables.py  prewarm_cache.py  run_toughtables_baseline.py  sig_vs_sota.py  test_corr_candgen.py  tt_base_offline.py  warm_2023_snapshot.py  warm_candidates_250wt.py  warm_pending_caches.py
tests/: test_eval_splits.py  test_graph_builder.py  test_kg.py  test_kg_fetch.py  test_loaders.py  test_metrics.py  test_significance.py
tests/fixtures/: rugby_table.json
(+13 files in other folders)
