[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flint"
version = "0.1.0"
description = "FLINT: fast lightweight interpretation of tables (CTA+CPA) via gradient-boosted rankers + classical arborescence decode"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "torch-geometric>=2.5",
  "numpy>=1.24",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "sentence-transformers>=2.2",
  "omegaconf>=2.3",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "black>=24.0"]
llm = ["openai>=1.0"]  # for the LLM few-shot robustness baseline (Gate 5)

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["data", "experiments", ".git", "*.egg-info"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
